// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 start theme display 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div
      className="row-container"
    >
      <div
        className="row"
        key="0"
      >
        <div
          className="content content-primary-size content-primary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render 2 start theme displays 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div
      className="row-container"
    >
      <div
        className="row"
        key="0"
      >
        <div
          className="content content-primary-size content-primary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 1"
          />
        </div>
      </div>
      <div
        className="row"
        key="1"
      >
        <div
          className="content content-secondary-size content-secondary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render 3 start theme displays 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div
      className="row-container"
    >
      <div
        className="row"
        key="0"
      >
        <div
          className="content content-primary-size content-primary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 1"
          />
        </div>
      </div>
      <div
        className="row"
        key="1"
      >
        <div
          className="content content-secondary-size content-primary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 2"
          />
        </div>
      </div>
      <div
        className="row"
        key="2"
      >
        <div
          className="content content-secondary-size content-secondary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render a comment 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <ItemComment
      isTruncated={false}
      text="comment"
      textStyle="attention"
    />
  </div>
</div>
`;

exports[`should render a default component 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  />
</div>
`;

exports[`should render a end accessory 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  />
  <div
    className="accessory end-accessory accessory-align-center"
  >
    <img
      alt="Graphic"
    />
  </div>
</div>
`;

exports[`should render a start accessory 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="accessory start-accessory accessory-align-center"
  >
    <img
      alt="Graphic"
    />
  </div>
  <div
    className="body"
  />
</div>
`;

exports[`should render an accessory center aligned 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="accessory start-accessory accessory-align-center"
  >
    <img
      alt="Graphic"
    />
  </div>
  <div
    className="body"
  />
</div>
`;

exports[`should render an accessory top aligned 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="accessory start-accessory accessory-align-top"
  >
    <img
      alt="Graphic"
    />
  </div>
  <div
    className="body"
  />
</div>
`;

exports[`should render one column 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div
      className="row-container"
    >
      <div
        className="row"
        key="0"
      >
        <div
          className="content content-primary-size content-primary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 1"
          />
        </div>
      </div>
      <div
        className="row"
        key="1"
      >
        <div
          className="content content-secondary-size content-secondary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render start accessory space reserved 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="accessory start-accessory accessory-align-center"
  />
  <div
    className="body"
  />
</div>
`;

exports[`should render truncated display 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div
      className="row-container"
    >
      <div
        className="row"
        key="0"
      >
        <div
          className="content content-primary-size content-primary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={true}
            text="display1display1display1display1display1display1display1display1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render two columns with 8 displays 1`] = `
<div
  className="item-view two-columns"
>
  <div
    className="body"
  >
    <div
      className="row-container"
    >
      <div
        className="row"
        key="0"
      >
        <div
          className="content content-primary-size content-primary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 1"
          />
        </div>
        <div
          className="content content-primary-size content-primary-color"
          key="1"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 2"
          />
        </div>
      </div>
      <div
        className="row"
        key="1"
      >
        <div
          className="content content-secondary-size content-primary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 3"
          />
        </div>
        <div
          className="content content-secondary-size content-primary-color"
          key="1"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 4"
          />
        </div>
      </div>
      <div
        className="row"
        key="2"
      >
        <div
          className="content content-secondary-size content-secondary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 5"
          />
        </div>
        <div
          className="content content-secondary-size content-secondary-color"
          key="1"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 6"
          />
        </div>
      </div>
      <div
        className="row"
        key="3"
      >
        <div
          className="content content-secondary-size content-secondary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 7"
          />
        </div>
        <div
          className="content content-secondary-size content-secondary-color"
          key="1"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 8"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render two columns with odd number of displays 1`] = `
<div
  className="item-view two-columns"
>
  <div
    className="body"
  >
    <div
      className="row-container"
    >
      <div
        className="row"
        key="0"
      >
        <div
          className="content content-primary-size content-primary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 1"
          />
        </div>
        <div
          className="content content-primary-size content-primary-color"
          key="1"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 2"
          />
        </div>
      </div>
      <div
        className="row"
        key="1"
      >
        <div
          className="content content-secondary-size content-secondary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with 1 display 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div
      className="row-container"
    >
      <div
        className="row"
        key="0"
      >
        <div
          className="content content-primary-size content-primary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with 2 displays 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div
      className="row-container"
    >
      <div
        className="row"
        key="0"
      >
        <div
          className="content content-primary-size content-primary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 1"
          />
        </div>
      </div>
      <div
        className="row"
        key="1"
      >
        <div
          className="content content-secondary-size content-secondary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with 3 displays 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div
      className="row-container"
    >
      <div
        className="row"
        key="0"
      >
        <div
          className="content content-primary-size content-primary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 1"
          />
        </div>
      </div>
      <div
        className="row"
        key="1"
      >
        <div
          className="content content-secondary-size content-primary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 2"
          />
        </div>
      </div>
      <div
        className="row"
        key="2"
      >
        <div
          className="content content-secondary-size content-secondary-color"
          key="0"
        >
          <ItemDisplay
            isInvalid={false}
            isTruncated={false}
            text="display 3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with a display and graphic 1`] = `
<div
  className="item-view one-column"
>
  <div
    className="body"
  >
    <div
      className="row-container"
    >
      <div
        className="row"
        key="0"
      >
        <div
          className="content content-primary-size content-primary-color"
          key="0"
        >
          <ItemDisplay
            icon={
              <img
                alt="Graphic"
              />
            }
            isInvalid={false}
            isTruncated={false}
            text="display 1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
